labs/projecto-final2/deploy-webpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  strategy:
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: cachac/kubelabs_webapp:1.1.7
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-vol
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
      volumes:
        - name: config-vol
          configMap:
            name: config-webpage
