labs/projecto-final2/private-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-api
  namespace: private
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-api
  template:
    metadata:
      labels:
        app: private-api
    spec:
      containers:
      - name: private-api
        image: cachac/kubelabs_privateapi:1.0.2
        ports:
        - containerPort: 3002
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3082
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3082
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
