labs/projecto-final2/public-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
  namespace: public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      labels:
        app: public-api
    spec:
      containers:
      - name: public-api
        image: cachac/kubelabs_public_api:1.0.0
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: logs
          mountPath: /app/logs
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
      volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: public-api-pvc
