labs/projecto-final2/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpage
  namespace: public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webpage
  template:
    metadata:
      labels:
        app: webpage
    spec:
      containers:
      - name: webpage
        image: cachac/kubelabs_webapp:1.1.7
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/config.js
          subPath: config.js
        resources:
          limits:
            cpu: "100m"
            memory: "100Mi"
          requests:
            cpu: "10m"
            memory: "50Mi"
      volumes:
      - name: config-volume
        configMap:
          name: config-webpage
