labs/projecto-final2/private-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-api
  namespace: private
spec:
  selector:
    app: private-api
  ports:
  - port: 3002
    targetPort: 3002
