labs/projecto-final2/public-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api
  namespace: public
spec:
  selector:
    app: public-api
  ports:
  - port: 3000
    targetPort: 3000
