labs/projecto-final2/svc-webpage.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webpage
  namespace: public
spec:
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 8080
