labs/projecto-final2/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webpage-svc
  namespace: public
spec:
  selector:
    app: webpage
  ports:
  - port: 80
    targetPort: 8080
