labs/projecto-final2/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-svc
  namespace: public
spec:
  selector:
    app: websocket
  ports:
  - port: 3001
    targetPort: 3001
