labs/projecto-final2/websocket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
  namespace: public
spec:
  rules:
  - host: websocket.fercanales.kubelabs.dev
    http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: websocket-svc
            port:
              number: 3001
